[package]
name = "pki-watcher"
version = "0.0.0"
rust-version="1.71.0"
edition="2021"
[features]
default = ["kube-store", "file-store", "spiffe-store"]
kube-store = []
file-store = []
spiffe-store = []
[dependencies]
telemetry = { version = "0.1.3" }
tokio = { version = "1.38.0", features = ["full"] }

kube = { version = "0.92.0" , features = ["runtime", "rustls-tls"]}
#k8s-openapi = "0.22.0"

x509-parser = { version = "0.16.0", features = ["verify"] }
thiserror = { version = "1.0.61" }
rustls-platform-verifier = { version = "0.3.2" }
tracing = { version = "0.1.40" }
rustls = { version = "0.23.11" }
rustls-pemfile = { version = "2.1.2" }
rustls-pki-types = { version = "1.7.0" }
webpki = { version = "0.22.4" }
rsa = { version = "0.9.6" }
elliptic-curve = { version = "0.13.8", features = ["sec1"] }
#ecdsa.workspace = true
const-hex = { version = "1.12.0" }
der = { version = "0.7.9" }
# asn1.workspace = true
pkcs1 = { version = "0.7.5" }
pkcs5 = { version = "0.7.1" }
pkcs8 = { version = "0.10.2" }
sec1 = { version = "0.7.3", features = ["pkcs8"] }
either = { version = "1.13.0" }
const-oid = { version = "0.9.6" }
serde = { version = "1.0.204" }
async-trait = { version = "0.1.81" }
notify = { version = "6.1.1" }
futures = { version = "0.3.30" }
spiffe = { version = "0.4.0" }
spki = { version = "0.7.3" }


[dev-dependencies]
k8s-openapi = { version = "0.22.0", features = ["v1_28"] }
kubernetes-mock = "0.1.0"